gomegle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gomegle-ingress
  namespace: gomegle
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gomegle.sh
        - www.gomegle.sh
      secretName: gomegle-tls
  rules:
    - host: gomegle.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gomegle-web
                port:
                  number: 3000
    - host: www.gomegle.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gomegle-web
                port:
                  number: 3000
